fix - width on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -3508,7 +3508,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 10px;
-    width: 500px;
+    width: 460px;
   }
 .main h1 {
     font-size: 2.4rem;
